[package]
name = "attackerkb-api-rs" #改这个
version = "0.1.2"
edition = "2021"
authors = ["Kali-Team <root@kali-team.cn>"]
description = "Rust Library for AttackerKB API"
homepage = "https://github.com/emo-crab/attackerkb-api-rs"
repository = "https://github.com/emo-crab/attackerkb-api-rs"
readme = "README.md"
license = "GPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.dev.package."*"]
opt-level = 3
[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3


[dependencies]
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "native-tls"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
derive_builder = "0.20.0"
nvd-cves = { version = "0.1.1", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }